--- a/styles/styles.css
+++ b/styles/styles.css
@@ -624,7 +624,7 @@ body {
 }
 
 .navigation-catalog-link {
-  font-family: "Raleway";
+  font-family: "Raleway",sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -1988,7 +1988,7 @@ body {
 }
 
 .catalog-filter-title {
-  font-family: 'Rubik';
+  font-family: "Rubik",sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
