--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,7 +291,8 @@ body {
 }
 
 .cart-link:focus {
-  border: 1px dashed #7b61ff;
+  outline: 2px solid #af4fff;
+  ;
 }
 
 .cart-link-wrapper {
@@ -329,7 +330,7 @@ body {
 }
 
 .cart-close-button:focus {
-  border: 2px solid #af4fff;
+  outline: 2px solid #af4fff;
 }
 
 .cart-open-butten:hover {
@@ -441,18 +442,25 @@ body {
 }
 
 .search-submit {
-  border: 2px solid #000000;
-  border-radius: 0 50px 50px 0;
-  width: 160px;
-  height: 40px;
-  padding-left: 54px;
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
+  display: inline-block;
+  font-family: inherit;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  background-color: #ffe17f;
+  color: #000000;
+  border: 2px solid #000000;
   border-left: none;
+  border-radius: 0 50px 50px 0;
+  background-color: #ffe17f;
+  cursor: pointer;
+  height: 40px;
+  min-width: 160px;
+}
+
+.button-block:focus-within {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+  position: relative;
 }
 
 .search-submit:hover {
@@ -463,6 +471,10 @@ body {
 .search-submit:active {
   background-color: #000000;
   color: #ffffff;
+  opacity: 0.3;
+}
+
+.search-submit:disabled {
   opacity: 0.3;
 }
 
@@ -507,7 +519,6 @@ body {
   min-height: 54px;
   padding-top: 17px;
   box-sizing: border-box;
-
 }
 
 .navigation-catalog-title::after {
@@ -557,7 +568,6 @@ body {
 .dropdown-menu-wrapper {
   list-style: none;
   display: inline-flex;
-
 }
 
 .dropdown-menu-wrapper:first-child {
@@ -624,7 +634,7 @@ body {
 }
 
 .navigation-catalog-link {
-  font-family: "Raleway",sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -644,7 +654,6 @@ body {
 
 .navigation-catalog-link:focus {
   outline: 2px solid #af4fff;
-
 }
 
 .page-container {
@@ -750,7 +759,7 @@ body {
   top: 206px;
   right: 0;
   content: "";
-  background-image: url(../images/arrow-right.svg);
+  background-image: url("../images/arrow-right.svg");
   background-repeat: no-repeat;
   height: 60px;
   width: 20px;
@@ -1066,7 +1075,6 @@ body {
   align-items: flex-start; */
   position: relative;
   z-index: 15;
-
 }
 
 .service::after {
@@ -1120,7 +1128,6 @@ body {
   width: 280px;
   background: #000000;
   color: #ffe17f;
-  ;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -1148,7 +1155,6 @@ body {
 .delivery-slider {
   display: flex;
   flex-direction: column;
-
 }
 
 .delivery-slider-title {
@@ -1323,7 +1329,6 @@ body {
 .information-about {
   width: 520px;
   position: relative;
-
 }
 
 .information-contacts {
@@ -1371,7 +1376,6 @@ body {
 
 .information-item:not(:last-child) {
   margin-bottom: 15px;
-
 }
 
 .button-information {
@@ -1395,7 +1399,6 @@ body {
   bottom: 40%;
   left: 0%;
   z-index: -1;
-
 }
 
 .button-information:focus {
@@ -1441,7 +1444,7 @@ body {
 
 .notification {
   box-sizing: border-box;
-  width: 1440px;
+  width: 100%;
   min-height: 421px;
   background-color: #f0f0f0;
   margin: 0 auto;
@@ -1576,7 +1579,7 @@ body {
   color: #ffffff;
   text-decoration-line: none;
   background-color: #444444;
-  width: 1440px;
+  width: 100%;
   min-height: 321px;
   margin: 0 auto;
 }
@@ -1618,10 +1621,8 @@ body {
 }
 
 .footer-adresse {
-
   min-width: 239px;
   box-sizing: border-box;
-
 }
 
 .footer-adresse-wrapper {
@@ -1775,6 +1776,10 @@ body {
   background-position: center;
 }
 
+.footer-social-svg:focus {
+  outline: none;
+}
+
 .social-item-youtube .footer-social-svg {
   background-image: url("../images/youtube-dv.svg");
 }
@@ -1828,7 +1833,6 @@ body {
   width: 1160px;
   margin: 0 auto;
   background-color: #ffffff;
-
 }
 
 .breadcrumbs {
@@ -1892,7 +1896,6 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-
 }
 
 .breadcrumbs-item:not(:last-child):after {
@@ -1922,7 +1925,6 @@ body {
 .catalog-filter {
   width: 320px;
   padding: 29px 0 60px 0;
-
 }
 
 .catalog-sorting-header {
@@ -1965,6 +1967,7 @@ body {
   line-height: 30px;
   margin-top: 15px;
   position: relative;
+  margin-right: 221px;
 }
 
 .select-control:hover {
@@ -1988,7 +1991,7 @@ body {
 }
 
 .catalog-filter-title {
-  font-family: "Rubik",sans-serif;
+  font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -2010,14 +2013,23 @@ body {
   content: "";
 }
 
+.view-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
 .page-prev {
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 10px solid #000000;
-  position: absolute;
   opacity: 0.2;
-  right: 657px;
-  top: 413px;
+  margin: 0;
+  padding: 0;
+  height: 6px;
+  position: absolute;
+  top: 24px;
 }
 
 .page-prev:hover {
@@ -2029,7 +2041,47 @@ body {
 }
 
 .page-prev:focus {
-  outline: 2px solid #af4fff;
+  outline: none
+}
+
+.page-next:focus {
+  outline: none
+}
+
+.page-prev::before {
+  content: "";
+  position: absolute;
+  width: 34px;
+  height: 34px;
+  background-image: url("../images/catalog/view-focus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  top: -5px;
+  left: -17px;
+  display: none;
+  fill: #af4fff;
+}
+
+.page-next::before {
+  content: "";
+  position: absolute;
+  width: 34px;
+  height: 34px;
+  background-image: url("../images/catalog/view-focus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  top: -23px;
+  left: -17px;
+  display: none;
+  fill: #af4fff;
+}
+
+.page-prev:focus.page-prev::before {
+  display: block;
+}
+
+.page-next:focus.page-next::before {
+  display: block;
 }
 
 .page-next {
@@ -2037,9 +2089,10 @@ body {
   border-right: 6px solid transparent;
   border-top: 10px solid #000000;
   opacity: 0.2;
-  right: 625px;
-  top: 413px;
+  height: 5px;
   position: absolute;
+  left: 30px;
+  top: 31px;
 }
 
 .page-next:hover {
@@ -2050,12 +2103,8 @@ body {
   opacity: 1;
 }
 
-.page-next:focus {
-  outline: 2px solid #af4fff;
-}
-
 .price {
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 
 .range-block {
@@ -2092,7 +2141,56 @@ body {
   cursor: pointer;
   position: absolute;
   top: 0;
+  left: 0;
   display: block;
+}
+
+.range-handle-min::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  background-image: url("../images/range-handle-focus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  top: -5px;
+  left: -5px;
+  display: none;
+}
+
+.range-handle-max::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  background-image: url("../images/range-handle-focus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  top: -5px;
+  left: -5px;
+  display: none;
+}
+
+.range-handle-min:focus.range-handle-min::before {
+  display: block;
+}
+
+.range-handle-max:focus.range-handle-max::before {
+  display: block;
+}
+
+.range-handle:hover {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background-color: #ebebeb;
+}
+
+.range-handle:active {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background-color: #000000
+}
+
+.range-handle:focus {
+  outline: none;
 }
 
 .range-handle-min {
@@ -2105,41 +2203,15 @@ body {
 
 .range-input-wrapper {
   display: flex;
-  position: absolute;
-  left: 238px;
+  height: 20px;
+  align-items: center;
+  margin-left: -15px;
 }
 
-.range-input-min {
-  border: none;
-  width: 75px;
-  color: #000000;
-  opacity: 0.3;
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  display: flex;
-  margin-right: 29px;
-}
-
-.range-input-min:focus {
-  border: 2px solid #af4fff;
-}
-
-.range-input-max {
-  border: none;
-  width: 75px;
-  color: #000000;
-  opacity: 0.3;
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  display: flex;
+.range-value-container {
+  width: 83px;
+  box-sizing: border-box;
+  margin-right: 22px;
 }
 
 .range-value {
@@ -2151,6 +2223,11 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+  color: #0000004d;
+}
+
+.range-value-container:focus-within {
+  outline: 2px solid #AF4FFF;
 }
 
 .range-value:focus {
@@ -2158,7 +2235,10 @@ body {
 }
 
 .range-label {
-  padding-right: 2px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #0000004d;
 }
 
 .radio-list {
@@ -2205,6 +2285,16 @@ body {
   border-color: #000000;
 }
 
+.checkbox-input:focus + .checkbox-label::after {
+  outline: 2px solid #af4fff;
+  outline-offset: 6px;
+}
+
+.checkbox-label:focus::before {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
 .checkbox-label::after {
   content: "";
   position: absolute;
@@ -2214,7 +2304,6 @@ body {
   left: 5px;
   background: url("../images/catalog/tick.svg") no-repeat 0 0;
   display: none;
-
 }
 
 .checkbox-input:checked + .checkbox-label::after {
@@ -2266,6 +2355,11 @@ body {
   display: block;
 }
 
+.radio-input:focus-within + .radio-label::before {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
 .radio-input:checked + .radio-label::before {
   border-color: #000000;
 }
@@ -2274,7 +2368,6 @@ body {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-
 }
 
 .catalog-list {
@@ -2294,7 +2387,6 @@ body {
   padding: 0;
   margin: 0;
   position: relative;
-
 }
 
 .catalog-image {
@@ -2307,7 +2399,6 @@ body {
 .catalog-description {
   display: flex;
   justify-content: space-between;
-
 }
 
 .catalog-link {
@@ -2418,6 +2509,11 @@ body {
   width: 760px;
   height: 52px;
   border: 3px solid #e5e5e5;
+  margin: 0 auto;
+  margin-bottom: 44px;
+  text-align: center;
+}
+.sorting-more {
   font-weight: 800;
   font-size: 16px;
   line-height: 19px;
@@ -2425,12 +2521,12 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
-  margin: 0 auto;
   text-decoration-line: none;
   justify-content: center;
-  margin-bottom: 44px;
+  display: flex;
+  text-align: center;
+  margin: auto;
 }
-
 .catalog-sorting-more:hover {
   border: 3px solid #000000;
 }
@@ -2439,11 +2535,12 @@ body {
   opacity: 0.3;
 }
 
-.catalog-sorting-more:focus {
+.catalog-sorting-more:focus-within {
   outline: 2px solid #af4fff;
-
 }
-
+.sorting-more:focus {
+  outline: none;
+}
 .pagination {
   width: 760px;
   height: 71px;
@@ -2530,6 +2627,7 @@ body {
   list-style-type: none;
   display: flex;
   text-decoration: none;
+  flex-wrap: wrap;
 }
 
 .pagination-item {
@@ -2589,9 +2687,9 @@ body {
   justify-content: center;
 }
 
-/*.modal-container-close {
-  display: flex;
-}*/
+.modal-container-close {
+  display: none;
+}
 
 .modal-delivery {
   border: 10px solid #000000;
@@ -2700,7 +2798,6 @@ body {
 
 .input-mail {
   border: 2px solid #ff3d3d;
-
 }
 
 .modal-persinfo-fault {
@@ -2712,7 +2809,6 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-
 }
 
 .modal-product {
