--- a/styles/styles.css
+++ b/styles/styles.css
@@ -242,9 +242,9 @@ body {
   background: #000000;
   color: #ffffff;
   width: 320px;
-  min-height: 301px;
+  z-index: 30;
   position: absolute;
-  bottom: -301px;
+  top: 100%;
   right: -79px;
   padding: 20px;
   box-sizing: border-box;
@@ -1201,16 +1201,17 @@ body {
   background-image: url("../images/garanty.svg");
   width: 171px;
   height: 195px;
-  right: 0;
-  top: 0;
+  right: -204px;
+  top: 46px;
 }
+
 
 .credit::before {
   background-image: url("../images/credit.svg");
   width: 156px;
   height: 188px;
-  right: 0;
-  top: 0;
+  right: -203px;
+  top: 47px;
 }
 
 .delivery-description {
@@ -1499,7 +1500,7 @@ body {
 
 .notification-input {
   width: 557px;
-  height: 55px;
+  min-height: 55px;
   background-color: #f0f0f0;
   border: none;
   border-bottom: 3px solid #C4C4C4;
@@ -1522,7 +1523,7 @@ body {
 }
 
 .submit-description {
-  height: 55px;
+  min-height: 55px;
   width: 253px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -1633,15 +1634,14 @@ body {
 }
 
 .footer-catalog-center {
-  min-width: 319px;
-  margin-right: 178px;
+  margin-right: 179px;
   box-sizing: border-box;
+  margin-left: 39px;
 }
 
 .footer-catalog-list {
   list-style: none;
   display: flex;
-  justify-content: space-between;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -1650,7 +1650,10 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #FFFFFF;
-  min-width: 319px;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  padding-top: 18px;
 }
 
 .footer-catalog-item:not(:last-child) {
@@ -1727,8 +1730,7 @@ body {
 }
 
 .footer-social {
-  min-width: 150px;
-  display: flex;
+  max-width: 150px;
 }
 
 .footer-adresse-wrapper::before {
@@ -1746,7 +1748,6 @@ body {
   padding: 0;
   list-style-type: none;
   flex-wrap: wrap;
-  min-width: 50px;
   justify-content: space-between;
   gap: 15px;
 }
@@ -2285,15 +2286,15 @@ body {
   border-color: #000000;
 }
 
-.checkbox-input:focus + .checkbox-label::after {
-  outline: 2px solid #af4fff;
-  outline-offset: 6px;
-}
-
-.checkbox-label:focus::before {
+.checkbox-input:focus-within + .checkbox-label::before {
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
+
+/*.checkbox-label:focus::before {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}*/
 
 .checkbox-label::after {
   content: "";
@@ -2513,6 +2514,7 @@ body {
   margin-bottom: 44px;
   text-align: center;
 }
+
 .sorting-more {
   font-weight: 800;
   font-size: 16px;
@@ -2527,6 +2529,7 @@ body {
   text-align: center;
   margin: auto;
 }
+
 .catalog-sorting-more:hover {
   border: 3px solid #000000;
 }
@@ -2538,9 +2541,11 @@ body {
 .catalog-sorting-more:focus-within {
   outline: 2px solid #af4fff;
 }
+
 .sorting-more:focus {
   outline: none;
 }
+
 .pagination {
   width: 760px;
   height: 71px;
@@ -2677,8 +2682,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  /*display: flex;*/
-  display: none;
+  display: flex;
   width: 100%;
   height: 100%;
   background-color: #f0f0f0e6;
@@ -2781,18 +2785,52 @@ body {
   margin-top: 9px;
 }
 
+.modal-input:hover {
+  background: #dcdcdc;
+}
+
+.modal-input:focus {
+  outline: 2px solid #af4fff;
+  ;
+}
+
+.email:invalid {
+  color: #ff3d3d;
+  border: 1px solid #ff3d3d;
+
+}
+
+.email:invalid + .modal-persinfo-fault {
+  color: #ff3d3d;
+}
+
 .input-name {
   position: relative;
 }
 
 .input-name::after {
   content: "";
-  background-image: url("../images/login-person.svg");
+  background-image: url("../images/person-modal.svg");
   background-repeat: no-repeat;
-  background-color: #b3b3b3;
+  top: 62px;
   position: absolute;
-  right: 0;
+  right: 23px;
   width: 13px;
+  height: 12px;
+}
+
+.input-email {
+  position: relative;
+}
+
+.input-email::after {
+  content: "";
+  background-image: url("../images/letter.svg");
+  background-repeat: no-repeat;
+  top: 62px;
+  position: absolute;
+  right: 23px;
+  width: 15px;
   height: 12px;
 }
 
@@ -2801,7 +2839,7 @@ body {
 }
 
 .modal-persinfo-fault {
-  color: #ff3d3d;
+  color: #000000;
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
@@ -2809,6 +2847,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+
 }
 
 .modal-product {
@@ -2824,13 +2863,9 @@ body {
 }
 
 .modal-button-container {
-  display: none;
-  background: #000000;
-  color: #ffffff;
-  width: 200px;
-  min-height: 166px;
-  position: absolute;
-  z-index: 20;
+  display: flex;
+  width: 30px;
+  position: relative
 }
 
 .modal-button-information {
@@ -2838,33 +2873,50 @@ body {
   position: relative;
 }
 
-.modal-button-information:hover .modal-button-container {
+.modal-button-container:hover .button-information-description {
   display: block;
 }
 
-.modal-button-information::after {
+.modal-button-container::after {
   content: "i";
   position: absolute;
-  right: 33px;
-  top: 3px;
+  left: 122px;
+  bottom: 2px;
   background-color: #ffe17f;
   background-repeat: no-repeat;
-  border-radius: 100%;
+  border-radius: 50%;
   color: #000000;
   width: 26px;
   height: 26px;
-  padding-left: 10px;
+  padding-left: 11px;
   box-sizing: border-box;
   cursor: pointer;
 }
 
 .button-information-description {
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
+  width: 200px;
+  position: absolute;
+  margin-top: 11px;
+  z-index: 1;
+  padding: 19px 17px;
+  background-color: #000000;
+  box-shadow: 0 10px 0 #0000001a;
+  color: #ffffff;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
+  display: none;
+  box-sizing: border-box;
+}
+
+.button-information-description::after {
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 8px solid #000000;
+  position: absolute;
+  top: -7px;
+  content: "";
+  left: 128px;
 }
 
 .modal-button-quantity {
@@ -2879,7 +2931,18 @@ body {
   height: 60px;
   width: 60px;
   background: #f0f0f0;
-  display: inline-block;
+}
+.button-minus-plus:hover {
+  background: #ebebeb;
+  opacity: 0.6;
+}
+
+.button-minus-plus:active {
+  opacity: 0.3;
+}
+
+.button-minus-plus:focus {
+  outline: 2px solid #AF4FFF;
 }
 
 .button-minus {
@@ -2896,10 +2959,15 @@ body {
   cursor: pointer;
 }
 
-.input-quontity {
+.input-quantity:invalid {
+  border: 2px solid #ff3d3d;
+}
+
+.input-quantity {
   background: #f0f0f0;
   border: none;
   height: 60px;
+  width: 60px;
   display: flex;
   text-align: center;
   font-family: "Rubik", sans-serif;
@@ -2909,10 +2977,19 @@ body {
   line-height: 20px;
 }
 
+.input-quantity::-webkit-outer-spin-button,
+.input-quantity::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .button-submit {
   border: none;
   background: none;
   width: 200px;
+}
+
+.button-submit:focus {
+  outline: 2px solid #af4fff;
 }
 
 .catalog-filter-fieldset {
